 * Modified bugnote last_modified query slightly.
 * Updated PHP and MySQL requirements.
 * Updated Norwegian, Russian, Danish translations.
 * Added die to print_header_redirect().
 * Added russian_koi8 translation.
 * Added HTTP_POST_FILES to core_API.php.
 * Added check for empty bugnotes.
 * Removed view_csv_export_inc.php (unused).

05.12.2002  -   0.17.2

 * Fixed error in set_project where setting a project would result in a loop.
 * Fixed account profiles to check for blank inputs.
 * Fixed some problems with BASIC_AUTH.
 * Fixed problems with documentation links.
 * Fixed a few documentation errors in configuration.html.
 * Fixed bug_update to no longer cut off steps_to_reproduce if it has quotation marks.
 * Fixed # bug links in emails.
 * Fixed bugnote update to redirect properly after update.
 * Fixed bugnote update to check for proper access.
 * Fixed bug_file_upload_inc to user $g_max_file_size.
 * Fixed CSV exporting to not have SPAN tags.
 * Fixed CSV export MIME type.
 * Fixed potential variable warning in main_page.
 * Fixed signup to detect empty usernames.
 * Fixed user creation to detect empty usernames.
 * Fixed bug file upload error.  Error message was misreported.
 * Fixed project doc upload error.  Error message was misreported.
 * Fixed problem with bottom page menu not displaying when turned on.
 * Fixed warning message on report. Warning: Undefined variable: f_file_name ...
 * Fixed edit bugnote to allow the correct users to edit and update.
 * Fixed g_limit_reporters to work properly for project users.
 * Modified accounts so that protected accounts are not accessible by the user.
 * Modified report page formating.
 * Modified file size reports to show up as bytes.
 * Modified email string padding and line separation characters.
 * Modified account page to show default and current project access levels.
 * Modified news posting to properly limit project lists for non Administrators.